--- a/JavaScript/demo.html
+++ b/JavaScript/demo.html
@@ -15,7 +15,7 @@
                 resolve(data);
               // }
             }, 1000);
-            reject(); comment this line in and out!
+            //reject(); comment this line in and out!
             // return data;
         }
         function requestDataFromDatabase(){
